cabal-version:      >=1.10
name:               snake
version:            0.1.0.0
license:            GPL-2
license-file:       LICENSE
author:             sayyadirfanali
maintainer:         sayyadirfanali
build-type:         Simple
extra-source-files: CHANGELOG.md

executable snake
  main-is:          Main.hs
  other-modules:    Data, Events, Init, Render, Util
  build-depends:    base,
                    ansi-terminal,
                    mtl,
                    random
  hs-source-dirs:   src
  default-language: Haskell2010
  default-extensions: FlexibleContexts
